Working read and write

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="google-site-verification" content="38AKa1W5SAx8ZUMXvMnZqD39pIY7sKgjwKSdlfChPaQ" />
 
 <link rel="stylesheet" type="text/css" href="main.css" />
-<link rel="stylesheet" href="mobile.css" type="text/css" />
+<!-- link rel="stylesheet" href="mobile.css" type="text/css" / -->
 
 <script type="text/javascript">
 	//this is used by Post.class.js
