--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
 
 
 <script type="text/javascript" src="js/Post.class.js"></script>
+<script type="text/javascript" src="js/User.class.js"></script>
 <script type="text/javascript" src="js/PostList.class.js"></script>
 <script type="text/javascript" src="js/PageView.class.js"></script>
 <script type="text/javascript" src="js/CurrentTime.object.js"></script>
 <script type="text/javascript" src="js/PageNav.class.js.php"></script>
+<script type="text/javascript" src="js/global.js.php"></script>
 
 
 <title>
@@ -41,33 +43,46 @@
 <body>
 
 <div id="header">
-	<div style="width:250px;height:80px;background:grey;margin:0 0 10px 0;">
-		MLIQ Logo
-	</div>
-	
-	<div id="globalNav">
-		<div>
+	<ul id="globalNav">
+		<li>
 			<a href="#/">
 				Main Pitch
 			</a>
-		</div>
-		<div>
-			<a href="javascript://">
-				Login
-			</a>
-		</div>
-		<div>
+		</li>
+		<li>
 			<a href="#/about">
 				About
 			</a>
-		</div>
-		<div>
+		</li>
+		<li>
 			<a href="#/advertise">
 				Advertise
 			</a>
-		</div>
-		<div style="clear:both;background:none;">heo</div>
+		</li>
+	</ul>
+	<div id="loginWindow">
+		<a href="#/login">
+			Login
+		</a>
+		<form onsubmit="
+			user.login($(this).children('.username').val(), $(this).children('.password').val());
+			return false;
+		">
+		
+			<span class="error_message">Invalid username or password</span>
+			<label for="enter_username">Username: </label>
+			<input type="text" class="username" id="enter_username" />
+			
+			<label for="enter_password">Password: </label>
+			<input type="password" class="password" id="enter_password" />
+		
+			<input type="submit" class="button" style="float:right;" value="Log in" />
+			<a href="#/createNewAccount">Create an account</a>
+		</form>
+		
 	</div>
+	<div id="user"></div>
+	
 </div> <!-- id="header" -->
 
 <div id="main_content">
